Added Final Recipe

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
        <li><a href="recipes/stroganoff.html" target="_blank" rel="noopener noreferrer">Stroganoff Recipe</a></li>
        <li><a href="recipes/meatloaf.html" target="blank" rel="noopener noreferrer">Meatloaf Recipe</a></li>
+       <li><a href="recipes/bbqribs.html" target="_blank" rel="noopener noreferrer">BBQ Ribs Recipe</a></li>
     </ul>
 
 
